--- a/exp-analysis.ipynb
+++ b/exp-analysis.ipynb
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4a190c7",
+   "id": "fa50c8d7",
    "metadata": {},
    "source": [
     "#### Quantidade de produtos únicos"
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4798ca71",
+   "id": "cdb5b8f0",
    "metadata": {},
    "source": [
     "#### Produtos com entrega expressa "
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f00fb5e",
+   "id": "94ff5472",
    "metadata": {},
    "source": [
     "#### Categorias únicas e contagem de produtos por categoria"
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "270bcad3",
+   "id": "849480e7",
    "metadata": {},
    "source": [
     "## Distribuições de valores de atributos numéricos \n",
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75453deb",
+   "id": "69ebb376",
    "metadata": {},
    "source": [
     "### Preço"
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49ce70b1",
+   "id": "234bcb92",
    "metadata": {},
    "source": [
     "#### Qual o preço do produto mais caro?"
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfe76468",
+   "id": "7475ee9c",
    "metadata": {},
    "source": [
     "#### Qual o produto mais caro?"
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beb4fd92",
+   "id": "a85de574",
    "metadata": {},
    "source": [
     "### Peso"
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da1f0bd7",
+   "id": "a86bfb6b",
    "metadata": {},
    "source": [
     "#### Qual o peso máximo no dataset?"
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80d4d00f",
+   "id": "f1bf747f",
    "metadata": {},
    "source": [
     "#### Quais os produtos mais pesados do dataset?"
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85dbcc36",
+   "id": "7723fe36",
    "metadata": {},
    "source": [
     "### View Count"
@@ -1136,7 +1136,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "bb187ee7",
+   "id": "51ade8cc",
    "metadata": {},
    "outputs": [
     {
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8da4943",
+   "id": "8384377f",
    "metadata": {},
    "source": [
     "#### Máximo de cliques por produto"
@@ -1188,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "c71b66bd",
+   "id": "9c2851d4",
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68a20f13",
+   "id": "f84ff096",
    "metadata": {},
    "source": [
     "#### Qual o produto mais clicado?"
@@ -1217,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "fb0cee6e",
+   "id": "1e324bf1",
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c1fd27c",
+   "id": "8ae333e1",
    "metadata": {},
    "source": [
     "### Order Count"
@@ -1314,7 +1314,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "3a73610d",
+   "id": "172e14a3",
    "metadata": {},
    "outputs": [
     {
@@ -1335,7 +1335,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "a21acd99",
+   "id": "8a3fe569",
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75463af7",
+   "id": "9cb85f44",
    "metadata": {},
    "source": [
     "#### Máximo de vezes que um produto foi comprado?"
@@ -1366,7 +1366,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "9daf9618",
+   "id": "b0cfee2d",
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01e8839c",
+   "id": "4e8ea770",
    "metadata": {},
    "source": [
     "#### Qual o produto mais comprado?"
@@ -1395,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "44529b7f",
+   "id": "69a3a4bf",
    "metadata": {},
    "outputs": [
     {
@@ -1483,7 +1483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1057e2d2",
+   "id": "28af1d01",
    "metadata": {},
    "source": [
     "### Cart Count"
@@ -1492,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "f101c497",
+   "id": "04a2a4ac",
    "metadata": {},
    "outputs": [
     {
@@ -1513,7 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "ec469125",
+   "id": "fa85d238",
    "metadata": {},
    "outputs": [
     {
@@ -1535,7 +1535,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0320bff0",
+   "id": "378e7b51",
    "metadata": {},
    "source": [
     "#### Máximo de vezes que um produto foi adicionado ao carrinho?"
@@ -1544,7 +1544,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "65ffcf78",
+   "id": "d25eee67",
    "metadata": {},
    "outputs": [
     {
@@ -1564,7 +1564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1e729a7",
+   "id": "86205c54",
    "metadata": {},
    "source": [
     "#### Qual o produto mais adicionado ao carrinho?"
@@ -1573,7 +1573,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "2cb3ec9a",
+   "id": "f44ff485",
    "metadata": {},
    "outputs": [
     {
@@ -1661,7 +1661,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e504149f",
+   "id": "e253ae3e",
    "metadata": {},
    "source": [
     "### Qual a correlação entre as features numéricas?"
@@ -1670,7 +1670,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "6517a755",
+   "id": "10e22ab7",
    "metadata": {},
    "outputs": [
     {
@@ -1693,7 +1693,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "a5b4cef6",
+   "id": "37141ca9",
    "metadata": {},
    "outputs": [
     {
@@ -1899,7 +1899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef659b1e",
+   "id": "d0683003",
    "metadata": {},
    "source": [
     "Observamos tópicos relacionados a maternidade (tópico 1), brindes/lembrancinhas (tópico 5), decoração (tópico 7), formaturas (tópico 8)"
@@ -2069,6 +2069,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "89a5830a",
+   "metadata": {},
+   "source": [
+    "### Quantas queries únicas?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "id": "1f08a734",
@@ -2088,6 +2096,14 @@
    "source": [
     "# queries unicas\n",
     "len(pairs[\"query\"].unique())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0daec641",
+   "metadata": {},
+   "source": [
+    "### Quantos produtos relevantes por query?"
    ]
   },
   {
@@ -2205,7 +2221,6 @@
     }
    ],
    "source": [
-    "# quantos produtos relevantes por query\n",
     "pairs.groupby(\"query\",as_index=False).count()[[\"query\",\"product_id\"]]"
    ]
   },
@@ -2214,7 +2229,9 @@
    "id": "02758560",
    "metadata": {},
    "source": [
-    "### Wordcloud"
+    "### Wordcloud\n",
+    "\n",
+    "Queremos entender quais os termos mais comuns nas queries"
    ]
   },
   {
@@ -2261,6 +2278,14 @@
     "plt.title(\"Wordcloud - Queries\")\n",
     " \n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82fdd22d",
+   "metadata": {},
+   "source": [
+    "Um termo que chama a anteção é \"natal\". Isso pode ser devido a um viés de escolha dos dados, ou então a um grande volume de busca por itens de natal que compense o restante de buscas fora do período natalino"
    ]
   }
  ],
