--- a/exp-analysis.ipynb
+++ b/exp-analysis.ipynb
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa50c8d7",
+   "id": "c15626b1",
    "metadata": {},
    "source": [
     "#### Quantidade de produtos únicos"
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdb5b8f0",
+   "id": "43ee6f33",
    "metadata": {},
    "source": [
     "#### Produtos com entrega expressa "
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94ff5472",
+   "id": "072c11a2",
    "metadata": {},
    "source": [
     "#### Categorias únicas e contagem de produtos por categoria"
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "849480e7",
+   "id": "83537a2c",
    "metadata": {},
    "source": [
     "## Distribuições de valores de atributos numéricos \n",
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69ebb376",
+   "id": "1e3f19eb",
    "metadata": {},
    "source": [
     "### Preço"
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "234bcb92",
+   "id": "7224f0ee",
    "metadata": {},
    "source": [
     "#### Qual o preço do produto mais caro?"
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7475ee9c",
+   "id": "708f5df9",
    "metadata": {},
    "source": [
     "#### Qual o produto mais caro?"
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a85de574",
+   "id": "c7fcfe82",
    "metadata": {},
    "source": [
     "### Peso"
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a86bfb6b",
+   "id": "6bb51ea6",
    "metadata": {},
    "source": [
     "#### Qual o peso máximo no dataset?"
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1bf747f",
+   "id": "17459a10",
    "metadata": {},
    "source": [
     "#### Quais os produtos mais pesados do dataset?"
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7723fe36",
+   "id": "88b6dc12",
    "metadata": {},
    "source": [
     "### View Count"
@@ -1136,7 +1136,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "51ade8cc",
+   "id": "52566c40",
    "metadata": {},
    "outputs": [
     {
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8384377f",
+   "id": "c616a1dc",
    "metadata": {},
    "source": [
     "#### Máximo de cliques por produto"
@@ -1188,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "9c2851d4",
+   "id": "98ee3aa5",
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f84ff096",
+   "id": "8367f7b5",
    "metadata": {},
    "source": [
     "#### Qual o produto mais clicado?"
@@ -1217,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "1e324bf1",
+   "id": "253d1250",
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ae333e1",
+   "id": "db73f92f",
    "metadata": {},
    "source": [
     "### Order Count"
@@ -1314,7 +1314,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "172e14a3",
+   "id": "3a6d6397",
    "metadata": {},
    "outputs": [
     {
@@ -1335,7 +1335,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "8a3fe569",
+   "id": "4d93409a",
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cb85f44",
+   "id": "00b29739",
    "metadata": {},
    "source": [
     "#### Máximo de vezes que um produto foi comprado?"
@@ -1366,7 +1366,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "b0cfee2d",
+   "id": "37590143",
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e8ea770",
+   "id": "498aca44",
    "metadata": {},
    "source": [
     "#### Qual o produto mais comprado?"
@@ -1395,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "69a3a4bf",
+   "id": "08896712",
    "metadata": {},
    "outputs": [
     {
@@ -1483,7 +1483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28af1d01",
+   "id": "6b139786",
    "metadata": {},
    "source": [
     "### Cart Count"
@@ -1492,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "04a2a4ac",
+   "id": "e790228a",
    "metadata": {},
    "outputs": [
     {
@@ -1513,7 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "fa85d238",
+   "id": "95e72203",
    "metadata": {},
    "outputs": [
     {
@@ -1535,7 +1535,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "378e7b51",
+   "id": "afb540f7",
    "metadata": {},
    "source": [
     "#### Máximo de vezes que um produto foi adicionado ao carrinho?"
@@ -1544,7 +1544,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "d25eee67",
+   "id": "bbe6cb94",
    "metadata": {},
    "outputs": [
     {
@@ -1564,7 +1564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86205c54",
+   "id": "bbceb3a8",
    "metadata": {},
    "source": [
     "#### Qual o produto mais adicionado ao carrinho?"
@@ -1573,7 +1573,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "f44ff485",
+   "id": "f460c352",
    "metadata": {},
    "outputs": [
     {
@@ -1661,7 +1661,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e253ae3e",
+   "id": "f5291202",
    "metadata": {},
    "source": [
     "### Qual a correlação entre as features numéricas?"
@@ -1670,7 +1670,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "10e22ab7",
+   "id": "1ad66f5d",
    "metadata": {},
    "outputs": [
     {
@@ -1692,26 +1692,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "37141ca9",
+   "execution_count": 75,
+   "id": "709778ea",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                     print_count_product  view_count_product  \\\n",
-      "print_count_product             1.000000            0.510117   \n",
-      "view_count_product              0.510117            1.000000   \n",
-      "cart_count_product              0.336160            0.765994   \n",
-      "order_count_product             0.274641            0.642236   \n",
-      "\n",
-      "                     cart_count_product  order_count_product  \n",
-      "print_count_product            0.336160             0.274641  \n",
-      "view_count_product             0.765994             0.642236  \n",
-      "cart_count_product             1.000000             0.921664  \n",
-      "order_count_product            0.921664             1.000000  \n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>print_count_product</th>\n",
+       "      <th>view_count_product</th>\n",
+       "      <th>cart_count_product</th>\n",
+       "      <th>order_count_product</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>print_count_product</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.510117</td>\n",
+       "      <td>0.336160</td>\n",
+       "      <td>0.274641</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>view_count_product</th>\n",
+       "      <td>0.510117</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.765994</td>\n",
+       "      <td>0.642236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cart_count_product</th>\n",
+       "      <td>0.336160</td>\n",
+       "      <td>0.765994</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.921664</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>order_count_product</th>\n",
+       "      <td>0.274641</td>\n",
+       "      <td>0.642236</td>\n",
+       "      <td>0.921664</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     print_count_product  view_count_product  \\\n",
+       "print_count_product             1.000000            0.510117   \n",
+       "view_count_product              0.510117            1.000000   \n",
+       "cart_count_product              0.336160            0.765994   \n",
+       "order_count_product             0.274641            0.642236   \n",
+       "\n",
+       "                     cart_count_product  order_count_product  \n",
+       "print_count_product            0.336160             0.274641  \n",
+       "view_count_product             0.765994             0.642236  \n",
+       "cart_count_product             1.000000             0.921664  \n",
+       "order_count_product            0.921664             1.000000  "
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1722,7 +1783,7 @@
     "\"order_count_product\"]\n",
     "\n",
     "df2=products[numerical_cols].corr()\n",
-    "print(df2)"
+    "df2"
    ]
   },
   {
@@ -1899,7 +1960,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0683003",
+   "id": "adb606ef",
    "metadata": {},
    "source": [
     "Observamos tópicos relacionados a maternidade (tópico 1), brindes/lembrancinhas (tópico 5), decoração (tópico 7), formaturas (tópico 8)"
@@ -2070,7 +2131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89a5830a",
+   "id": "8369fbff",
    "metadata": {},
    "source": [
     "### Quantas queries únicas?"
@@ -2100,7 +2161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0daec641",
+   "id": "796517f8",
    "metadata": {},
    "source": [
     "### Quantos produtos relevantes por query?"
@@ -2226,6 +2287,106 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2149b2a4",
+   "metadata": {},
+   "source": [
+    "### Correlação entre features numéricas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "f279497a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>print_count_query</th>\n",
+       "      <th>view_count_query</th>\n",
+       "      <th>cart_count_query</th>\n",
+       "      <th>order_count_query</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>print_count_query</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.493277</td>\n",
+       "      <td>0.320973</td>\n",
+       "      <td>0.228145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>view_count_query</th>\n",
+       "      <td>0.493277</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.745866</td>\n",
+       "      <td>0.553108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cart_count_query</th>\n",
+       "      <td>0.320973</td>\n",
+       "      <td>0.745866</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.860162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>order_count_query</th>\n",
+       "      <td>0.228145</td>\n",
+       "      <td>0.553108</td>\n",
+       "      <td>0.860162</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   print_count_query  view_count_query  cart_count_query  \\\n",
+       "print_count_query           1.000000          0.493277          0.320973   \n",
+       "view_count_query            0.493277          1.000000          0.745866   \n",
+       "cart_count_query            0.320973          0.745866          1.000000   \n",
+       "order_count_query           0.228145          0.553108          0.860162   \n",
+       "\n",
+       "                   order_count_query  \n",
+       "print_count_query           0.228145  \n",
+       "view_count_query            0.553108  \n",
+       "cart_count_query            0.860162  \n",
+       "order_count_query           1.000000  "
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numerical_cols = [\"print_count_query\",\"view_count_query\",\"cart_count_query\",\"order_count_query\"]\n",
+    "\n",
+    "df3=pairs[numerical_cols].corr()\n",
+    "df3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "02758560",
    "metadata": {},
    "source": [
@@ -2282,7 +2443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82fdd22d",
+   "id": "93564635",
    "metadata": {},
    "source": [
     "Um termo que chama a anteção é \"natal\". Isso pode ser devido a um viés de escolha dos dados, ou então a um grande volume de busca por itens de natal que compense o restante de buscas fora do período natalino"
